# snippets

./: README.md  pyproject.toml
examples/: dispatch.py  func_signatures.py
patterns/: __init__.py
patterns/behavioral/: __init__.py
patterns/creational/: __init__.py  builder.py
patterns/structural/: __init__.py
snippets/: chunks.py  flat_from_nested.py  timer.py  timer_decorator.py
snippets/context_managers/: async_browser_context_manager.py  context_manager.py
snippets/decorators/: retry_decorator.py
tests/test_snippets/: test_timer.py  test_to_flat_dict.py
