[tool.poetry]
name = "snippets"
version = "0.1.0"
description = "Python snippets"
authors = ["Vlad P <perepechcko.vlad@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
