[tool.poetry]
name = "snippets"
version = "0.1.0"
description = "Python snippets"
authors = ["Vlad P <perepechcko.vlad@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
mypy = "^1.13.0"
ruff = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
exclude = "tests"

[tool.black]
line-length = 120
